Revert "Start GUI"
This reverts commit e9d49040e9f41c44a4e9c0fa113e2fc703be237b.