@@ -39,7 +39,33 @@
       <artifactId>jbcrypt</artifactId>
       <version>0.4</version>
     </dependency>
+      <!-- JavaFX Controls -->
+      <dependency>
+          <groupId>org.openjfx</groupId>
+          <artifactId>javafx-controls</artifactId>
+          <version>24.0.1</version>
+      </dependency>
 
+      <!-- JavaFX FXML -->
+      <dependency>
+          <groupId>org.openjfx</groupId>
+          <artifactId>javafx-fxml</artifactId>
+          <version>24.0.1</version>
+      </dependency>
+
+      <!-- JavaFX Base -->
+      <dependency>
+          <groupId>org.openjfx</groupId>
+          <artifactId>javafx-base</artifactId>
+          <version>24.0.1</version>
+      </dependency>
+
+      <!-- JavaFX Graphics -->
+      <dependency>
+          <groupId>org.openjfx</groupId>
+          <artifactId>javafx-graphics</artifactId>
+          <version>24.0.1</version>
+      </dependency>
   </dependencies>
 
   <build>
@@ -107,6 +133,22 @@
           </archive>
         </configuration>
       </plugin>
+
+        <plugin>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-maven-plugin</artifactId>
+            <version>0.0.8</version>
+            <configuration>
+                <mainClass>com.cross.hospital.gui.HospitalApp</mainClass>
+                <options>
+                    <option>--module-path</option>
+                    <option>C:\Users\ASUS\Downloads\openjfx-24.0.2_windows-x64_bin-sdk/lib</option>
+                    <option>--add-modules</option>
+                    <option>javafx.controls,javafx.fxml</option>
+                </options>
+            </configuration>
+        </plugin>
+
     </plugins>
   </build>
 
